<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ntrip_client</name>
  <version>0.0.1</version>
  <description>NTRIP client that sends NMEA-GGA messages to caster in return for RTCM correction messages</description>
  <maintainer email="sion.groechenig@salzburgresearch.at">Simon Groechenig @ Salzburg Research Forschungsgesellschaft mbH</maintainer>
  <license>Apache License 2.0</license>

  <exec_depend>nmea_msgs</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
